--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -4,6 +4,8 @@ annotation.processing.processor.options=-Aeclipselink.canonicalmodel.use_static_
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=LOCACAOFILMES
+application.vendor=alexv
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,38 +28,14 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/LOCACAOFILMES.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
-file.reference.classmate-1.1.0.jar=C:\\Users\\Renato\\Desktop\\Bibliotecas\\Hibernate Validator 5.2.4\\classmate-1.1.0.jar
-file.reference.hibernate-jpa-2.1-api-1.0.0.Final.jar=C:\\Users\\Renato\\Desktop\\Bibliotecas\\Hibernate Validator 5.2.4\\hibernate-jpa-2.1-api-1.0.0.Final.jar
-file.reference.hibernate-validator-5.2.4.Final.jar=C:\\Users\\Renato\\Desktop\\Bibliotecas\\Hibernate Validator 5.2.4\\hibernate-validator-5.2.4.Final.jar
-file.reference.hibernate-validator-annotation-processor-5.2.4.Final.jar=C:\\Users\\Renato\\Desktop\\Bibliotecas\\Hibernate Validator 5.2.4\\hibernate-validator-annotation-processor-5.2.4.Final.jar
-file.reference.hibernate-validator-cdi-5.2.4.Final.jar=C:\\Users\\Renato\\Desktop\\Bibliotecas\\Hibernate Validator 5.2.4\\hibernate-validator-cdi-5.2.4.Final.jar
-file.reference.javax.el-2.2.4.jar=C:\\Users\\Renato\\Desktop\\Bibliotecas\\Hibernate Validator 5.2.4\\javax.el-2.2.4.jar
-file.reference.javax.el-api-2.2.4.jar=C:\\Users\\Renato\\Desktop\\Bibliotecas\\Hibernate Validator 5.2.4\\javax.el-api-2.2.4.jar
-file.reference.jboss-logging-3.2.1.Final.jar=C:\\Users\\Renato\\Desktop\\Bibliotecas\\Hibernate Validator 5.2.4\\jboss-logging-3.2.1.Final.jar
-file.reference.joda-time-2.7.jar=C:\\Users\\Renato\\Desktop\\Bibliotecas\\Hibernate Validator 5.2.4\\joda-time-2.7.jar
-file.reference.jsoup-1.8.3.jar=C:\\Users\\Renato\\Desktop\\Bibliotecas\\Hibernate Validator 5.2.4\\jsoup-1.8.3.jar
-file.reference.log4j-1.2.17.jar=C:\\Users\\Renato\\Desktop\\Bibliotecas\\Hibernate Validator 5.2.4\\log4j-1.2.17.jar
-file.reference.paranamer-2.5.5.jar=C:\\Users\\Renato\\Desktop\\Bibliotecas\\Hibernate Validator 5.2.4\\paranamer-2.5.5.jar
-file.reference.postgresql-42.2.2.jar=C:\\Users\\Renato\\Desktop\\Bibliotecas\\postgresql-42.2.2.jar
-file.reference.validation-api-1.1.0.Final.jar=C:\\Users\\Renato\\Desktop\\Bibliotecas\\Hibernate Validator 5.2.4\\validation-api-1.1.0.Final.jar
+file.reference.postgresql-42.2.2.jar=C:\\Users\\alexv\\Documents\\Sistemas Para Internet\\6N1\\TA\\BibiotecasTA\\postgresql-42.2.2.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.Hibernate_4.3.11.classpath}:\
-    ${file.reference.classmate-1.1.0.jar}:\
-    ${file.reference.hibernate-jpa-2.1-api-1.0.0.Final.jar}:\
-    ${file.reference.hibernate-validator-5.2.4.Final.jar}:\
-    ${file.reference.hibernate-validator-annotation-processor-5.2.4.Final.jar}:\
-    ${file.reference.hibernate-validator-cdi-5.2.4.Final.jar}:\
-    ${file.reference.javax.el-2.2.4.jar}:\
-    ${file.reference.javax.el-api-2.2.4.jar}:\
-    ${file.reference.jboss-logging-3.2.1.Final.jar}:\
-    ${file.reference.joda-time-2.7.jar}:\
-    ${file.reference.jsoup-1.8.3.jar}:\
-    ${file.reference.log4j-1.2.17.jar}:\
-    ${file.reference.paranamer-2.5.5.jar}:\
-    ${file.reference.validation-api-1.1.0.Final.jar}:\
+    ${libs.Hibernate_4.3.11_JPA_2.1.classpath}:\
+    ${libs.Hibernate_Validator_5.2.4.classpath}:\
     ${file.reference.postgresql-42.2.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
