--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,13 +36,15 @@ jar.compress=false
 javac.classpath=\
     ${libs.Hibernate_4.3.11_JPA_2.1.classpath}:\
     ${libs.Hibernate_Validator_5.2.4.classpath}:\
-    ${file.reference.postgresql-42.2.2.jar}
+    ${file.reference.postgresql-42.2.2.jar}:\
+    ${libs.eclipselink.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
 javac.external.vm=true
 javac.processorpath=\
-    ${javac.classpath}
+    ${javac.classpath}:\
+    ${libs.eclipselinkmodelgen.classpath}
 javac.source=1.8
 javac.target=1.8
 javac.test.classpath=\
